# pain-lsp

./: Cargo.toml  build.rs
resources/icons/: README.md
resources/icons/windows/: lsp.rc
src/: lib.rs  lsp.rs  main.rs
tests/: lsp_completion_tests.rs  lsp_comprehensive_tests.rs  lsp_diagnostics_direct_tests.rs  lsp_diagnostics_tests.rs  lsp_examples_tests.rs  lsp_hover_tests.rs  lsp_stress_tests.rs  lsp_test_helpers.rs
