[package]
name = "pain-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "pain-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp.workspace = true
pain-compiler = { path = "../pain-compiler" }
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true

